<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_page.RegisterPageFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:src="@drawable/ic_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/shape_round_light_purple"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/email"
        android:paddingStart="90dp"
        android:textColor="@color/deep_purple"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_mail"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toTopOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_name"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_round_light_purple"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/username"
        android:paddingStart="90dp"
        android:textColor="@color/deep_purple"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintTop_toTopOf="@+id/et_user_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_round_light_purple"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/password"
        android:paddingStart="90dp"
        android:textColor="@color/deep_purple"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_minds_eye"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_round_deep_purple"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>